# amuse_ecs

./: CMakeLists.txt  LICENCE.txt  README.md
include/: ecs.hpp  types.hpp
include/amuse_ecs/: Untitled-1.cpp  app.hpp  archetype.hpp  archetype_id.hpp  ecs.hpp  entity.hpp  entity_info.hpp  event_handler.hpp  system_builder.hpp  view.hpp  world.hpp
src/: app.cpp  archetype.cpp  archetype_id.cpp  ecs.cpp  entity.cpp  main.cpp  view.cpp  world.cpp
tests/: CMakeLists.txt  app.cpp  archetype.cpp  archetype_id.cpp  component.cpp  components.hpp  entity.cpp  event_handler.cpp  tests.cpp  view.cpp  world.cpp
